; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/infinity60/extr_led_controller.c_is31_read_register.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/infinity60/extr_led_controller.c_is31_read_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tx = common dso_local global i32* null, align 8
@I2CD1 = common dso_local global i32 0, align 4
@IS31_ADDR_DEFAULT = common dso_local global i32 0, align 4
@IS31_TIMEOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is31_read_register(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @is31_select_page(i32 %7)
  %9 = load i32, i32* %5, align 4
  %10 = load i32*, i32** @tx, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @IS31_ADDR_DEFAULT, align 4
  %13 = load i32*, i32** @tx, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* @IS31_TIMEOUT, align 4
  %16 = call i32 @US2ST(i32 %15)
  %17 = call i32 @i2cMasterTransmitTimeout(i32* @I2CD1, i32 %12, i32* %13, i32 1, i32* %14, i32 1, i32 %16)
  ret i32 %17
}

declare dso_local i32 @is31_select_page(i32) #1

declare dso_local i32 @i2cMasterTransmitTimeout(i32*, i32, i32*, i32, i32*, i32, i32) #1

declare dso_local i32 @US2ST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
